<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Screen Swipe"
            android:textSize="25sp" />

        <TextView style="@style/how_to_play_text_view"
            android:text="@string/how_to_play_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView style="@style/how_to_play_text_view"
            android:text="@string/how_to_play_cols_title"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView style="@style/how_to_play_text_view"
            android:paddingTop="5dp"
            android:text="@string/how_to_play_cols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView style="@style/how_to_play_fake_toggle"
                android:background="@color/highlight_color"
                android:text="@string/up"
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView style="@style/how_to_play_fake_toggle"
                android:background="@color/base_color"
                android:text="@string/down"
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView style="@style/how_to_play_fake_toggle"
                android:background="@color/highlight_color"
                android:text="@string/left"
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView style="@style/how_to_play_fake_toggle"
                android:background="@color/base_color"
                android:text="@string/right"
                android:layout_width="20dp"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <TextView style="@style/how_to_play_text_view"
            android:text="@string/how_to_play_example_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
