<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.franzsarmiento.gridofbits.GameResultActivity">

    <TextView style="@style/title_text"
        android:id="@+id/tvTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTitle"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:textSize="30sp"
            android:id="@+id/tvCongratulations"
            android:layout_marginBottom="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:id="@+id/tvYourTimeDifficulty"
            android:layout_marginBottom="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/tvTotalScore"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:gravity="center"
            android:id="@+id/tvNewBestTime"
            android:layout_marginBottom="40dp"/>

        <Button style="@style/default_base_button"
            android:text="@string/play_again"
            android:id="@+id/btnPlayAgain"
            android:onClick="btnPlayAgainOnClick"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
